--- a/.github/workflows/AA0.yml
+++ b/.github/workflows/AA0.yml
@@ -27,8 +27,20 @@ jobs:
       - name: Get Repo Info
         id: get_repo_info
         run: |
-          echo "REPO_URL=$(if [ '${{ matrix.repo.value }}' = 'LibWrt' ]; then echo 'https://github.com/laipeng668/openwrt-6.x.git'; elif [ '${{ matrix.repo.value }}' = 'OpenWrt' ]; then echo 'https://github.com/laipeng668/openwrt.git'; else echo 'https://github.com/laipeng668/immortalwrt.git'; fi)" >> $GITHUB_ENV
-          echo "REPO_BRANCH=$(if [ '${{ matrix.repo.value }}' = 'LibWrt' ]; then echo 'k6.12-nss'; else echo 'master'; fi)" >> $GITHUB_ENV
+          # 根据 repo.value 确定仓库 URL 和分支
+          if [ '${{ matrix.repo.value }}' = 'LibWrt' ]; then
+            echo "REPO_OWNER=laipeng668" >> $GITHUB_ENV
+            echo "REPO_NAME=openwrt-6.x" >> $GITHUB_ENV
+            echo "REPO_BRANCH=k6.12-nss" >> $GITHUB_ENV
+          elif [ '${{ matrix.repo.value }}' = 'OpenWrt' ]; then
+            echo "REPO_OWNER=laipeng668" >> $GITHUB_ENV
+            echo "REPO_NAME=openwrt" >> $GITHUB_ENV
+            echo "REPO_BRANCH=master" >> $GITHUB_ENV
+          else # ImmWrt
+            echo "REPO_OWNER=laipeng668" >> $GITHUB_ENV
+            echo "REPO_NAME=immortalwrt" >> $GITHUB_ENV
+            echo "REPO_BRANCH=master" >> $GITHUB_ENV
+          fi
           echo "REPO_SHORT_NAME=${{ matrix.repo.value }}" >> $GITHUB_ENV
           echo "DEVICE_SHORT_NAME=${{ matrix.device.value }}" >> $GITHUB_ENV
           echo "CONFIG_NAME=${{ matrix.config.value }}" >> $GITHUB_ENV
@@ -39,14 +51,63 @@ jobs:
           echo "TZ=Asia/Shanghai" >> $GITHUB_ENV
 
       # --- 2. 克隆源码 ---
+      # 修正: 使用 {owner}/{repo} 格式，而不是完整 URL
       - name: Checkout Source Code
         uses: actions/checkout@v4
         with:
-          repository: ${{ env.REPO_URL }}
+          repository: ${{ env.REPO_OWNER }}/${{ env.REPO_NAME }}
           ref: ${{ env.REPO_BRANCH }}
           path: openwrt-source
 
-      # --- 3. 最大化可用磁盘空间 (可选) ---
+      # --- 3. 获取版本信息 ---
+      # 获取内核版本和版本信息
+      - name: Get Version Information (获取版本信息)
+        run: |
+          cd openwrt-source
+          echo "正在获取版本信息..."
+          # 尝试从 kernel-version.mk 获取内核版本 (常见于 OpenWrt)
+          if [ -f "include/kernel-version.mk" ]; then
+            KERNEL_VERSION_LINE=$(grep -E "^LINUX_VERSION" "include/kernel-version.mk" | head -1)
+            if [ -n "$KERNEL_VERSION_LINE" ]; then
+              KERNEL_VERSION=$(echo "$KERNEL_VERSION_LINE" | sed -E 's/.*=([0-9.]+).*/\1/')
+              echo "VERSION_KERNEL=$KERNEL_VERSION" >> $GITHUB_ENV
+            fi
+          fi
+
+          # 如果上面没找到，尝试从 target/linux/ipq60xx/Makefile 获取 (针对 IPQ60XX)
+          if [ -z "${{ env.VERSION_KERNEL }}" ] && [ -f "target/linux/ipq60xx/Makefile" ]; then
+            KERNEL_VERSION_LINE=$(grep -E "LINUX_VERSION" "target/linux/ipq60xx/Makefile" | head -1)
+            if [ -n "$KERNEL_VERSION_LINE" ]; then
+              KERNEL_VERSION=$(echo "$KERNEL_VERSION_LINE" | sed -E 's/.*=([0-9.]+).*/\1/')
+              echo "VERSION_KERNEL=$KERNEL_VERSION" >> $GITHUB_ENV
+            fi
+          fi
+
+          # 如果还是没找到，尝试从 .config 获取 (某些情况下)
+          if [ -z "${{ env.VERSION_KERNEL }}" ] && [ -f ".config" ]; then
+            KERNEL_VERSION_LINE=$(grep -E "^CONFIG_LINUX_KERNEL_VERSION" ".config" | head -1)
+            if [ -n "$KERNEL_VERSION_LINE" ]; then
+              KERNEL_VERSION=$(echo "$KERNEL_VERSION_LINE" | sed -E 's/.*=(.*)/\1/')
+              echo "VERSION_KERNEL=$KERNEL_VERSION" >> $GITHUB_ENV
+            fi
+          fi
+
+          # 如果仍未找到，设置默认值
+          if [ -z "${{ env.VERSION_KERNEL }}" ]; then
+            echo "VERSION_KERNEL=Unknown" >> $GITHUB_ENV
+          fi
+
+          # 获取 git 提交信息作为版本信息
+          # 注意: 这里我们获取最近一次提交的哈希和日期
+          COMMIT_HASH=$(git rev-parse --short HEAD)
+          COMMIT_DATE=$(git log -1 --format=%cd --date=format:'%Y-%m-%d %H:%M:%S')
+          COMMIT_MESSAGE=$(git log -1 --pretty=%B | head -c 100) # 限制长度
+          echo "VERSION_INFO=Commit: $COMMIT_HASH ($COMMIT_DATE) - $COMMIT_MESSAGE..." >> $GITHUB_ENV
+
+          echo "内核版本 (VERSION_KERNEL): ${{ env.VERSION_KERNEL }}"
+          echo "版本信息 (VERSION_INFO): ${{ env.VERSION_INFO }}"
+
+      # --- 4. 最大化可用磁盘空间 (可选) ---
       # 注意: 这个步骤只有在环境变量 MADS 设置为 'true' 时才会执行
       # 如果您想总是执行，可以移除 'if: env.MADS == 'true'' 条件
       - name: Maximize Available Disk Space (最大化可用磁盘空间)
@@ -62,7 +123,7 @@ jobs:
           remove-cached-tools: "true"
           remove-swapfile: "true"
 
-      # --- 4. 初始化环境 ---
+      # --- 5. 初始化环境 ---
       - name: Initialization Environment (初始化环境)
         env:
           DEBIAN_FRONTEND: noninteractive # 非交互模式安装软件包
@@ -74,7 +135,7 @@ jobs:
           sudo -E apt-get -y clean
           sudo timedatectl set-timezone "$TZ" # 设置时区
 
-      # --- 5. 设置工作目录和变量 ---
+      # --- 6. 设置工作目录和变量 ---
       - name: Setup Working Directory and Variables
         run: |
           cd openwrt-source
@@ -82,7 +143,7 @@ jobs:
           echo "GENERAL_CONFIG_FILE=$OPENWRT_PATH/configs/General.config" >> $GITHUB_ENV
           echo "CONFIG_FILE=$OPENWRT_PATH/configs/${{ env.DEVICE_SHORT_NAME }}_${{ env.CONFIG_NAME }}.config" >> $GITHUB_ENV
 
-      # --- 6. 合并配置文件 ---
+      # --- 7. 合并配置文件 ---
       # 注意: 请确认源码仓库中有 configs/General.config 和 configs/{DEVICE}_{CONFIG}.config
       # 这里使用 shell 脚本来合并配置文件
       - name: Merge Config Files (合并配置文件)
@@ -101,7 +162,7 @@ jobs:
           cat "$GENERAL_CONFIG_FILE" "$CONFIG_FILE" > .config
           echo "配置文件已合并到 .config"
 
-      # --- 7. 启动资源监控 ---
+      # --- 8. 启动资源监控 ---
       # 启动后台资源监控（15分钟间隔）
       - name: Start Resource Monitoring (启动资源监控)
         run: |
@@ -129,7 +190,7 @@ jobs:
           # 记录监控进程ID以便后续关闭
           echo "MONITOR_PID=\$!" > monitor_pid.txt
 
-      # --- 8. 编译固件 ---
+      # --- 9. 编译固件 ---
       # 注意: 请根据您的实际源码仓库结构和编译命令进行调整
       # 例如，可能需要运行 ./scripts/feeds update -a && ./scripts/feeds install -a
       # 然后运行 make defconfig 或 make menuconfig
@@ -145,7 +206,7 @@ jobs:
           # make -j$(nproc) V=s
           echo "编译完成。请替换此处的编译命令。"
 
-      # --- 9. 关闭资源监控 ---
+      # --- 10. 关闭资源监控 ---
       - name: Stop Resource Monitoring (关闭资源监控)
         run: |
           cd openwrt-source
@@ -155,7 +216,7 @@ jobs:
             rm monitor_pid.txt
           fi
 
-      # --- 10. 上传 Artifact ---
+      # --- 11. 上传 Artifact ---
       # 注意: 请根据实际的固件输出路径调整 'path'
       # 通常输出在 bin/targets/.../ 下
       - name: Upload Artifact (上传编译产物)
@@ -165,7 +226,7 @@ jobs:
           path: openwrt-source/bin/targets/*/*/*.img.gz # 请根据实际路径调整
           retention-days: 7 # 保留7天
 
-      # --- 11. 创建 Release ---
+      # --- 12. 创建 Release ---
       # 注意: 请确保在仓库设置中启用了 Releases 功能
       # 并且可能需要一个 GitHub Personal Access Token (PAT) 来创建 Release
       # 这里使用了 action-gh-release 插件，它通常需要 PAT
