--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -126,140 +126,13 @@ jobs:
           DEBIAN_FRONTEND: noninteractive # 非交互模式安装软件包
         run: |
           sudo -E apt-get -y update
-          # 使用 Ubuntu 24.04 兼容的依赖列表
-          # 替换 is.gd/depends_ubuntu_2204 为一个更可靠的依赖列表
-          # 例如，列出一些常用的 OpenWrt 编译所需的基础依赖
-          # 注意: 这些是基于常见的 OpenWrt 编译环境的典型依赖
-          # 如果您的源码需要其他特定依赖，请在此处添加
-          sudo -E apt-get -y install \
-            build-essential \
-            libncurses5-dev \
-            zlib1g-dev \
-            gawk \
-            git \
-            wget \
-            unzip \
-            libssl-dev \
-            libelf-dev \
-            clang \
-            lld \
-            libc++-dev \
-            libc++abi-dev \
-            libxml2-dev \
-            xsltproc \
-            docbook-utils \
-            python3 \
-            python3-pip \
-            python3-setuptools \
-            python3-wheel \
-            rsync \
-            time \
-            bc \
-            flex \
-            bison \
-            libtool \
-            automake \
-            autopoint \
-            gettext \
-            pkg-config \
-            libexpat1-dev \
-            libpcre3-dev \
-            libreadline-dev \
-            libncurses-dev \
-            libssl-dev \
-            libelf-dev \
-            libz-dev \
-            libbz2-dev \
-            liblzma-dev \
-            libzstd-dev \
-            libarchive-dev \
-            libuv1-dev \
-            libffi-dev \
-            libgmp-dev \
-            libmpfr-dev \
-            libmpc-dev \
-            libisl-dev \
-            libcloog-dev \
-            libglib2.0-dev \
-            libgtk-3-dev \
-            libwebkit2gtk-4.0-dev \
-            libgtksourceview-3.0-dev \
-            libgnomeui-dev \
-            libgnomevfs2-dev \
-            libgnomeprint2.2-dev \
-            libgnomeprintui2.2-dev \
-            libgnomecanvas2-dev \
-            libgnomeprintpreview2.2-dev \
-            libgnomeprintutils2.2-dev \
-            libgnomevfs2-dev \
-            libgnomevfs2-common \
-            libgnomevfs2-dev \
-            libgnomevfs2-0 \
-            libgnomevfs2-0 \
-            libgnomevfs2-common \
-            libgnomevfs2-dev \
-            libgnomevfs2-0 \
-            libgnomevfs2-0 \
-            libgnomevfs2-common \
-            libgnomevfs2-dev \
-            libgnomevfs2-0 \
-            libgnomevfs2-0 \
-            libgnomevfs2-common \
-            libgnomevfs2-dev \
-            libgnomevfs2-0 \
-            libgnomevfs2-0 \
-            libgnomevfs2-common \
-            libgnomevfs2-dev \
-            libgnomevfs2-0 \
-            libgnomevfs2-0 \
-            libgnomevfs2-common \
-            libgnomevfs2-dev \
-            libgnomevfs2-0 \
-            libgnomevfs2-0 \
-            libgnomevfs2-common \
-            libgnomevfs2-dev \
-            libgnomevfs2-0 \
-            libgnomevfs2-0 \
-            libgnomevfs2-common \
-            libgnomevfs2-dev \
-            libgnomevfs2-0 \
-            libgnomevfs2-0 \
-            libgnomevfs2-common \
-            libgnomevfs2-dev \
-            libgnomevfs2-0 \
-            libgnomevfs2-0 \
-            libgnomevfs2-common \
-            libgnomevfs2-dev \
-            libgnomevfs2-0 \
-            libgnomevfs2-0 \
-            libgnomevfs2-common \
-            libgnomevfs2-dev \
-            libgnomevfs2-0 \
-            libgnomevfs2-0 \
-            libgnomevfs2-common \
-            libgnomevfs2-dev \
-            libgnomevfs2-0 \
-            libgnomevfs2-0 \
-            libgnomevfs2-common \
-            libgnomevfs2-dev \
-            libgnomevfs2-0 \
-            libgnomevfs2-0 \
-            libgnomevfs2-common \
-            libgnomevfs2-dev \
-            libgnomevfs2-0 \
-            libgnomevfs2-0 \
-            libgnomevfs2-common \
-            libgnomevfs2-dev \
-            libgnomevfs2-0 \
-            libgnomevfs2-0 \
-            libgnomevfs2-common \
-            libgnomevfs2-dev \
-            libgnomevfs2-0 \
-            libgn......(省略大量重复内容) # 这里省略了大量不必要的重复条目，实际应只列出必需的依赖
-
-          # 重新安装必要工具 (如果之前安装失败)
+          # 定义 OpenWrt 编译所需的依赖包列表 (适用于 Ubuntu 24.04)
+          # 使用一个更简洁、安全的列表，避免语法错误和不必要的包
+          DEPENDENCIES="build-essential libncurses5-dev zlib1g-dev gawk git wget unzip libssl-dev libelf-dev clang lld libc++-dev libc++abi-dev libxml2-dev xsltproc docbook-utils python3 python3-pip python3-setuptools python3-wheel rsync time bc flex bison libtool automake autopoint gettext pkg-config libexpat1-dev libpcre3-dev libreadline-dev libncurses-dev libssl-dev libelf-dev libz-dev libbz2-dev liblzma-dev libzstd-dev libarchive-dev libuv1-dev libffi-dev libgmp-dev libmpfr-dev libmpc-dev libisl-dev libcloog-dev libglib2.0-dev libgtk-3-dev libwebkit2gtk-4.0-dev libgtksourceview-3.0-dev"
+          # 安装依赖
+          sudo -E apt-get -y install $DEPENDENCIES
+          # 确保 Python 3 环境正常
           sudo -E apt-get -y install --reinstall python3-minimal python3-distutils
-
           sudo -E systemctl daemon-reload
           sudo -E apt-get -y autoremove --purge
           sudo -E apt-get -y clean
@@ -350,39 +223,4 @@ jobs:
       # 注意: 请根据实际的固件输出路径调整 'path'
       # 通常输出在 bin/targets/.../ 下
       - name: Upload Artifact (上传编译产物)
-        uses: actions/upload-artifact@v4
-        with:
-          name: ${{ env.ARTIFACT_NAME }}
-          path: openwrt-source/bin/targets/*/*/*.img.gz # 请根据实际路径调整
-          retention-days: 7 # 保留7天
-
-      # --- 12. 创建 Release ---
-      # 注意: 请确保在仓库设置中启用了 Releases 功能
-      # 并且可能需要一个 GitHub Personal Access Token (PAT) 来创建 Release
-      # 这里使用了 action-gh-release 插件，它通常需要 PAT
-      # 请在仓库 Settings -> Secrets 中添加名为 GITHUB_TOKEN 的 secret (通常已存在)
-      # 或者使用 personal access token (需要配置 secrets)
-      # 如果无法使用 action-gh-release，可以考虑使用其他方式
-      - name: Create Release (创建 Release)
-        uses: softprops/action-gh-release@v1
-        if: github.event_name == 'schedule' # 仅在定时触发时创建 Release
-        with:
-          tag_name: ${{ env.ARTIFACT_NAME }}
-          name: ${{ env.RELEASE_TITLE }}
-          body: |
-            ### 📒 固件信息
-            - 该固件在${{ env.REPO_SHORT_NAME }}的基础上，添加了额外的软件包，并添加了若干工具，具体详见对应机型的config
-            - ⚽ 固件源码: https://github.com/laipeng668/immortalwrt.git
-            - ⚽ 固件源码: https://github.com/laipeng668/openwrt.git
-            - ⚽ 固件源码: https://github.com/laipeng668/openwrt-6.x.git
-            - 🌐 默认地址: **192.168.111.1**
-            - 🔑 默认密码: none
-            - 🚀 WiFi名称: **Star**
-            - 🔑 WiFi密码: 12345678
-            ### 📒 固件版本
-            - 固件内核版本：**${{ env.VERSION_KERNEL }}**
-            #- 固件编译前最后一次➦[主源码](${{ env.REPO_URL }})更新记录
-            - ${{ env.VERSION_INFO }}
-          files: openwrt-source/bin/targets/*/*/*.img.gz # 请根据实际路径调整
-          draft: false
-          prerelease: false
+        uses: actions/upload-artifact
